split financial report for own channels and marketplaces